# mdflow

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  PROCESS_STATE.md  STATE.md  pyproject.toml
archive/: STATE_20260522.md
docs/: test-matrix.md
docs/reviews/: 2026-05-21-m0-task1-13-codex.md  2026-05-21-url-handling-claude-meta-review.md  2026-05-21-url-handling-claude-review.md  2026-05-21-url-handling-codex-round1.md  2026-05-21-url-handling-codex-round2.md  2026-05-21-url-handling-final-agreement.md  2026-05-22-m0-api-surface-codex.md  2026-05-22-m0-cache-write-mkdtemp-codex.md  2026-05-22-m1a-sse-infrastructure-codex.md  2026-05-22-m1b-office-converters-codex.md  2026-05-22-m2-pdf-codex.md  2026-05-22-m3a-libreoffice-codex.md  2026-05-22-m3b-hwp-codex.md  2026-05-22-m4-mcp-codex.md  2026-05-23-m2b-marker-codex.md  2026-05-23-m5-ops-tooling-codex.md  2026-05-23-m6a-image-infrastructure-codex.md
docs/specs/: 2026-05-21-mdflow-design.md  2026-05-22-m1a-sse-infrastructure-design.md  2026-05-22-m1b-office-converters-design.md  2026-05-22-m2-pdf-design.md  2026-05-22-m3a-libreoffice-design.md  2026-05-22-m3b-hwp-design.md  2026-05-22-m4-mcp-design.md  2026-05-23-m5-ops-tooling-design.md  2026-05-23-m6-image-support-design.md
src/mdflow/: __init__.py  cli.py  settings.py
tests/: conftest.py  golden.py  test_cache.py  test_cache_canonical.py  test_capabilities.py  test_cli.py  test_composition.py  test_concurrency.py  test_errors.py  test_events.py  test_format_detect.py  test_golden_harness.py  test_m0_smoke.py  test_registry.py  test_service.py  test_settings.py  test_smoke_import.py  test_url_fetch.py  test_url_pipeline.py
tests/api/: conftest.py  test_admin.py  test_app.py  test_convert.py  test_metrics.py
tests/converters/: test_base.py  test_docx.py  (+11 more)
(+54 files in other folders)
