[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdflow"
version = "0.0.1"
description = "Document-to-Markdown conversion gateway (HTTP API + MCP)"
requires-python = ">=3.11"
authors = [{ name = "Taeyoung Song", email = "restful3@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "httpx>=0.26",
    "python-magic>=0.4.27",
    "chardet>=5.2",
    "python-multipart>=0.0.9",
    "mammoth>=1.6",
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1",
    "trafilatura>=1.8",
    "markdownify>=0.11",
    "beautifulsoup4>=4.12",
    "pymupdf4llm>=0.0.17",
    "fastmcp>=3.0",
    "typer>=0.12",
]

[project.scripts]
mdflow = "mdflow.cli:app"
mdflow-mcp = "mdflow.mcp.server:main"

[project.optional-dependencies]
hwp = ["pyhwp"]
gpu = ["marker-pdf>=1.0", "torch>=2.4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mdflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
markers = [
    "gpu: requires CUDA GPU",
    "libreoffice: requires LibreOffice runtime",
    "integration: end-to-end smoke",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
# Typer's idiom puts typer.Option/Argument in defaults (B008 false positive).
"src/mdflow/cli.py" = ["B008"]
